2008-01-17 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/rb_rating_helper.c: display a warning if one of the star
	  icons cannot be loaded.

2008-01-17 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_tracks.c: let gtkpod remember column sizes again.

	* src/prefs.c: enable horizontal scrollbar in the track view by
	  default.

2009-01-14  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* po/zh_CN.po: Update simple Chinese translation (Tan Zhixin)

2008-01-14 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* po/ro.po: updated Romanian translation. Thanks to Alex
          Eftimie.

2008-01-13 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_export.c: add export template for mp4 files.

	  src/prefs.c: remove references to export_template which
	  wasn't used. Thanks to Todd to point out both.

	* src/confirmation.c
	  src/misc_confirm.c: cleanup indentation

2008-01-11 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* data/gtkpod.glade: add property "translatble=yes" to the check
	  button "generate_video_thumbnails". Thanks to Eric.
	  
2008-01-11 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* configure.in
	  src/mp4file.c: Adding support for MP4V2 2.0_20081129 without
	  losing support for older versions of MP4V2 from the mpeg4ip
	  line. Thanks to William Hardeman.

2008-01-11 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/mp3file.c: correct programming error when determining offset
	  of the LAME tag. Thanks to <Anonymous> for submitting tracker
	  #2490479.

2009-01-04  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* configure.in,	data/man/gtkpod.1 -> data/man/gtkpod.1.in:
	Update man page and generate it to set the version properly.

	* po/zh_CN.po: Add simple Chinese translation (Tan Zhixin)

2008-12-31 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file.c
	  src/help.c
	  data/gtkpod.glade: string corrections -- thanks to Daniele Forsi.
