@@ -1,5 +1,12 @@
 2008-01-17 Jorg Schuler <jcsjcs at users.sourceforge.net>
 
+	* src/file_convert.c (conversion_log_set_status): don't change tab
+	  label text in conversion log window unless actually
+	  necessary. Fixes the "disappearing tooltips" problem (tracker
+	  #1906016).
+
+2008-01-17 Jorg Schuler <jcsjcs at users.sourceforge.net>
+
 	* src/rb_rating_helper.c: display a warning if one of the star
 	  icons cannot be loaded.
 
